fix maddeningly misaligned sidebar

--- a/src/ui/styles/main.scss
+++ b/src/ui/styles/main.scss
@@ -111,6 +111,10 @@ aside {
             opacity: 1;
         }
     }
+
+    form {
+        padding-left: 24px;
+    }
 }
 
 .sidebar-title {
